feat: auth completed

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@supabase/supabase-js": "^2.39.3",
     "@types/react-intl-redux": "^0.1.19",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
@@ -39,6 +41,8 @@
     "react-redux": "^9.1.0",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
+    "redux-form": "^8.3.10",
+    "redux-thunk": "^3.1.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
