feat: removed unnecessary packages && ts.config noImplicitAny true to false

--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^2.1.0",
     "@supabase/supabase-js": "^2.39.3",
-    "@types/react-intl-redux": "^0.1.19",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^11.0.3",
@@ -37,7 +35,6 @@
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-helmet-async": "^2.0.3",
-    "react-hook-form": "^7.48.2",
     "react-redux": "^9.1.0",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
@@ -46,11 +43,11 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
-    "@types/autosuggest-highlight": "^3.2.3",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
